TP_4/obj/AnalizadorSintactico.output
Estado 43 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 124 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 228 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | expresion ';'
    5     | declaracion ';'

    6 const: NUM_ENTERO
    7      | NUM_REAL
    8      | CHAR
    9      | const_enum

   10 const_enum: ID

   11 expresion: exp_asignacion
   12          | expresion ',' exp_asignacion

   13 exp_asignacion: exp_condicional
   14               | exp_unaria op_asignacion exp_asignacion

   15 exp_condicional: exp_OR_log
   16                | exp_OR_log '?' expresion ':' exp_condicional

   17 op_asignacion: '='
   18              | ASIG_MULT
   19              | ASIG_DIV
   20              | ASIG_MOD
   21              | ASIG_SUMA
   22              | ASIG_RESTA
   23              | ASIG_DESP_IZQ
   24              | ASIG_DESP_DER
   25              | ASIG_AND_BIN
   26              | ASIG_XOR_BIN
   27              | ASIG_OR_BIN

   28 exp_OR_log: exp_AND_log
   29           | exp_OR_log OP_OR exp_AND_log

   30 exp_AND_log: exp_OR_in
   31            | exp_AND_log OP_AND exp_OR_in

   32 exp_OR_in: exp_OR_ex
   33          | exp_OR_in '|' exp_OR_ex

   34 exp_OR_ex: exp_AND
   35          | exp_OR_ex '^' exp_AND

   36 exp_AND: exp_igualdad
   37        | exp_AND '&' exp_igualdad

   38 exp_igualdad: exp_relacional
   39             | exp_igualdad OP_IGUALDAD exp_relacional
   40             | exp_igualdad OP_DESIGUALDAD exp_relacional

   41 exp_relacional: exp_desp
   42               | exp_relacional '<' exp_desp
   43               | exp_relacional '>' exp_desp
   44               | exp_relacional OP_MENOR_IGUAL exp_desp
   45               | exp_relacional OP_MAYOR_IGUAL exp_desp

   46 exp_desp: exp_aditiva
   47         | exp_desp OP_DESP_IZQ exp_aditiva
   48         | exp_desp OP_DESP_DER exp_aditiva

   49 exp_aditiva: exp_multip
   50            | exp_aditiva '+' exp_multip
   51            | exp_aditiva '-' exp_multip

   52 exp_multip: exp_conversion
   53           | exp_multip '*' exp_conversion
   54           | exp_multip '/' exp_conversion
   55           | exp_multip '%' exp_conversion

   56 exp_conversion: exp_unaria
   57               | '(' nombre_tipo ')' exp_conversion exp_unaria

   58 exp_unaria: exp_sufijo
   59           | OP_INC exp_unaria
   60           | OP_DEC exp_unaria
   61           | op_unario exp_conversion
   62           | SIZEOF exp_unaria
   63           | SIZEOF '(' nombre_tipo ')'

   64 op_unario: '&'
   65          | '*'
   66          | '+'
   67          | '-'
   68          | '~'
   69          | '!'

   70 exp_sufijo: exp_primaria
   71           | exp_sufijo '[' expresion ']'
   72           | exp_sufijo '(' lista_argumentos ')'
   73           | exp_sufijo '.' ID
   74           | exp_sufijo OP_MIEMBRO_PUNT ID
   75           | exp_sufijo OP_INC
   76           | exp_sufijo OP_DEC

   77 lista_argumentos: exp_asignacion
   78                 | lista_argumentos ',' exp_asignacion

   79 exp_primaria: const
   80             | STRING
   81             | '(' expresion ')'

   82 declaracion: especificadores_declaracion lista_declaradores_opc

   83 lista_declaradores_opc: /* vacío */
   84                       | lista_declaradores

   85 especificadores_declaracion: CLASE_ALM especificadores_declaracion_opc
   86                            | especificador_tipo especificadores_declaracion_opc
   87                            | CALIF_TIPO especificadores_declaracion_opc

   88 especificadores_declaracion_opc: /* vacío */
   89                                | especificadores_declaracion

   90 lista_declaradores: declarador
   91                   | lista_declaradores ',' declarador

   92 declarador: decla
   93           | decla '=' inicializador

   94 inicializador: exp_asignacion
   95              | '{' lista_inicializadores coma_opc '}'

   96 coma_opc: /* vacío */
   97         | ','

   98 lista_inicializadores: inicializador
   99                      | lista_inicializadores ',' inicializador

  100 especificador_tipo: TIPO_DATO
  101                   | especificador_struct_union
  102                   | especificador_enum

  103 especificador_struct_union: STRUCT_UNION ID_opc '{' lista_declaradores_struct '}'
  104                           | STRUCT_UNION ID

  105 ID_opc: /* vacío */
  106       | ID

  107 lista_declaradores_struct: declaracion_struct
  108                          | lista_declaradores_struct declaracion_struct

  109 declaracion_struct: lista_calificadores declaradores_struct ';'

  110 lista_calificadores: especificador_tipo lista_calificadores_opc
  111                    | CALIF_TIPO lista_calificadores_opc

  112 lista_calificadores_opc: /* vacío */
  113                        | lista_calificadores

  114 declaradores_struct: decla_struct
  115                    | declaradores_struct ',' decla_struct

  116 decla_struct: decla
  117             | decla_opc ':' exp_constante

  118 decla_opc: /* vacío */
  119          | decla

  120 exp_constante: exp_condicional

  121 exp_constante_opc: /* vacío */
  122                  | exp_constante

  123 decla: puntero_opc declarador_directo

  124 puntero_opc: /* vacío */
  125            | puntero

  126 puntero: '*' lista_calificadores_tipos_opc
  127        | '*' lista_calificadores_tipos_opc puntero

  128 lista_calificadores_tipos_opc: /* vacío */
  129                              | lista_calificadores_tipos

  130 lista_calificadores_tipos: CALIF_TIPO
  131                          | lista_calificadores_tipos CALIF_TIPO

  132 declarador_directo: ID
  133                   | '(' decla ')'
  134                   | declarador_directo '[' exp_constante_opc ']'
  135                   | declarador_directo '(' lista_tipos_param ')'
  136                   | declarador_directo '(' lista_identificadores_opc ')'

  137 lista_identificadores_opc: /* vacío */
  138                          | lista_identificadores

  139 lista_tipos_param: lista_parametros
  140                  | lista_parametros ',' '.' '.' '.'

  141 lista_parametros: declaracion_parametro
  142                 | lista_parametros ',' declaracion_parametro

  143 declaracion_parametro: especificadores_declaracion decla
  144                      | especificadores_declaracion declarador_abstracto_opc

  145 declarador_abstracto_opc: /* vacío */
  146                         | declarador_abstracto

  147 lista_identificadores: ID
  148                      | lista_identificadores ',' ID

  149 especificador_enum: ENUM ID_opc '{' lista_enumeradores '}'
  150                   | ENUM ID

  151 lista_enumeradores: enumerador
  152                   | lista_enumeradores ',' enumerador

  153 enumerador: const_de_enumeracion
  154           | const_de_enumeracion '=' exp_constante

  155 const_de_enumeracion: ID

  156 nombre_tipo: lista_calificadores declarador_abstracto_opc

  157 declarador_abstracto: puntero
  158                     | puntero_opc declarador_abstracto_directo

  159 declarador_abstracto_directo: '(' declarador_abstracto ')'
  160                             | declarador_abstracto_directo_opc '[' exp_constante_opc ']'
  161                             | declarador_abstracto_directo_opc '(' lista_tipos_param_opc ')'

  162 declarador_abstracto_directo_opc: /* vacío */
  163                                 | declarador_abstracto_directo

  164 lista_tipos_param_opc: /* vacío */
  165                      | lista_tipos_param


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3
'!' (33) 69
'%' (37) 55
'&' (38) 37 64
'(' (40) 57 63 72 81 133 135 136 159 161
')' (41) 57 63 72 81 133 135 136 159 161
'*' (42) 53 65 126 127
'+' (43) 50 66
',' (44) 12 78 91 97 99 115 140 142 148 152
'-' (45) 51 67
'.' (46) 73 140
'/' (47) 54
':' (58) 16 117
';' (59) 4 5 109
'<' (60) 42
'=' (61) 17 93 154
'>' (62) 43
'?' (63) 16
'[' (91) 71 134 160
']' (93) 71 134 160
'^' (94) 35
'{' (123) 95 103 149
'|' (124) 33
'}' (125) 95 103 149
'~' (126) 68
error (256)
NUM_ENTERO (258) 6
NUM_REAL (259) 7
TIPO_DATO (260) 100
ID (261) 10 73 74 104 106 132 147 148 150 155
ASIG_MULT (262) 18
ASIG_DIV (263) 19
ASIG_MOD (264) 20
ASIG_SUMA (265) 21
ASIG_RESTA (266) 22
ASIG_DESP_IZQ (267) 23
ASIG_DESP_DER (268) 24
ASIG_AND_BIN (269) 25
ASIG_XOR_BIN (270) 26
ASIG_OR_BIN (271) 27
OP_INC (272) 59 75
OP_DEC (273) 60 76
OP_IGUALDAD (274) 39
OP_DESIGUALDAD (275) 40
OP_AND (276) 31
OP_OR (277) 29
OP_MENOR_IGUAL (278) 44
OP_MAYOR_IGUAL (279) 45
OP_DESP_IZQ (280) 47
OP_DESP_DER (281) 48
OP_MIEMBRO_PUNT (282) 74
CHAR (283) 8
STRING (284) 80
SIZEOF (285) 62 63
CLASE_ALM (286) 85
CALIF_TIPO (287) 87 111 130 131
STRUCT_UNION (288) 103 104
ENUM (289) 149 150


No terminales con las reglas donde aparecen

$accept (60)
    en la izquierda: 0
input (61)
    en la izquierda: 1 2, en la derecha: 0 2
line (62)
    en la izquierda: 3 4 5, en la derecha: 2
const (63)
    en la izquierda: 6 7 8 9, en la derecha: 79
const_enum (64)
    en la izquierda: 10, en la derecha: 9
expresion (65)
    en la izquierda: 11 12, en la derecha: 4 12 16 71 81
exp_asignacion (66)
    en la izquierda: 13 14, en la derecha: 11 12 14 77 78 94
exp_condicional (67)
    en la izquierda: 15 16, en la derecha: 13 16 120
op_asignacion (68)
    en la izquierda: 17 18 19 20 21 22 23 24 25 26 27, en la derecha:
    14
exp_OR_log (69)
    en la izquierda: 28 29, en la derecha: 15 16 29
exp_AND_log (70)
    en la izquierda: 30 31, en la derecha: 28 29 31
exp_OR_in (71)
    en la izquierda: 32 33, en la derecha: 30 31 33
exp_OR_ex (72)
    en la izquierda: 34 35, en la derecha: 32 33 35
exp_AND (73)
    en la izquierda: 36 37, en la derecha: 34 35 37
exp_igualdad (74)
    en la izquierda: 38 39 40, en la derecha: 36 37 39 40
exp_relacional (75)
    en la izquierda: 41 42 43 44 45, en la derecha: 38 39 40 42 43
    44 45
exp_desp (76)
    en la izquierda: 46 47 48, en la derecha: 41 42 43 44 45 47 48
exp_aditiva (77)
    en la izquierda: 49 50 51, en la derecha: 46 47 48 50 51
exp_multip (78)
    en la izquierda: 52 53 54 55, en la derecha: 49 50 51 53 54 55
exp_conversion (79)
    en la izquierda: 56 57, en la derecha: 52 53 54 55 57 61
exp_unaria (80)
    en la izquierda: 58 59 60 61 62 63, en la derecha: 14 56 57 59
    60 62
op_unario (81)
    en la izquierda: 64 65 66 67 68 69, en la derecha: 61
exp_sufijo (82)
    en la izquierda: 70 71 72 73 74 75 76, en la derecha: 58 71 72
    73 74 75 76
lista_argumentos (83)
    en la izquierda: 77 78, en la derecha: 72 78
exp_primaria (84)
    en la izquierda: 79 80 81, en la derecha: 70
declaracion (85)
    en la izquierda: 82, en la derecha: 5
lista_declaradores_opc (86)
    en la izquierda: 83 84, en la derecha: 82
especificadores_declaracion (87)
    en la izquierda: 85 86 87, en la derecha: 82 89 143 144
especificadores_declaracion_opc (88)
    en la izquierda: 88 89, en la derecha: 85 86 87
lista_declaradores (89)
    en la izquierda: 90 91, en la derecha: 84 91
declarador (90)
    en la izquierda: 92 93, en la derecha: 90 91
inicializador (91)
    en la izquierda: 94 95, en la derecha: 93 98 99
coma_opc (92)
    en la izquierda: 96 97, en la derecha: 95
lista_inicializadores (93)
    en la izquierda: 98 99, en la derecha: 95 99
especificador_tipo (94)
    en la izquierda: 100 101 102, en la derecha: 86 110
especificador_struct_union (95)
    en la izquierda: 103 104, en la derecha: 101
ID_opc (96)
    en la izquierda: 105 106, en la derecha: 103 149
lista_declaradores_struct (97)
    en la izquierda: 107 108, en la derecha: 103 108
declaracion_struct (98)
    en la izquierda: 109, en la derecha: 107 108
lista_calificadores (99)
    en la izquierda: 110 111, en la derecha: 109 113 156
lista_calificadores_opc (100)
    en la izquierda: 112 113, en la derecha: 110 111
declaradores_struct (101)
    en la izquierda: 114 115, en la derecha: 109 115
decla_struct (102)
    en la izquierda: 116 117, en la derecha: 114 115
decla_opc (103)
    en la izquierda: 118 119, en la derecha: 117
exp_constante (104)
    en la izquierda: 120, en la derecha: 117 122 154
exp_constante_opc (105)
    en la izquierda: 121 122, en la derecha: 134 160
decla (106)
    en la izquierda: 123, en la derecha: 92 93 116 119 133 143
puntero_opc (107)
    en la izquierda: 124 125, en la derecha: 123 158
puntero (108)
    en la izquierda: 126 127, en la derecha: 125 127 157
lista_calificadores_tipos_opc (109)
    en la izquierda: 128 129, en la derecha: 126 127
lista_calificadores_tipos (110)
    en la izquierda: 130 131, en la derecha: 129 131
declarador_directo (111)
    en la izquierda: 132 133 134 135 136, en la derecha: 123 134 135
    136
lista_identificadores_opc (112)
    en la izquierda: 137 138, en la derecha: 136
lista_tipos_param (113)
    en la izquierda: 139 140, en la derecha: 135 165
lista_parametros (114)
    en la izquierda: 141 142, en la derecha: 139 140 142
declaracion_parametro (115)
    en la izquierda: 143 144, en la derecha: 141 142
declarador_abstracto_opc (116)
    en la izquierda: 145 146, en la derecha: 144 156
lista_identificadores (117)
    en la izquierda: 147 148, en la derecha: 138 148
especificador_enum (118)
    en la izquierda: 149 150, en la derecha: 102
lista_enumeradores (119)
    en la izquierda: 151 152, en la derecha: 149 152
enumerador (120)
    en la izquierda: 153 154, en la derecha: 151 152
const_de_enumeracion (121)
    en la izquierda: 155, en la derecha: 153 154
nombre_tipo (122)
    en la izquierda: 156, en la derecha: 57 63
declarador_abstracto (123)
    en la izquierda: 157 158, en la derecha: 146 159
declarador_abstracto_directo (124)
    en la izquierda: 159 160 161, en la derecha: 158 163
declarador_abstracto_directo_opc (125)
    en la izquierda: 162 163, en la derecha: 160 161
lista_tipos_param_opc (126)
    en la izquierda: 164 165, en la derecha: 161


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end          desplazar e ir al estado 2
    NUM_ENTERO    desplazar e ir al estado 3
    NUM_REAL      desplazar e ir al estado 4
    TIPO_DATO     desplazar e ir al estado 5
    ID            desplazar e ir al estado 6
    OP_INC        desplazar e ir al estado 7
    OP_DEC        desplazar e ir al estado 8
    CHAR          desplazar e ir al estado 9
    STRING        desplazar e ir al estado 10
    SIZEOF        desplazar e ir al estado 11
    CLASE_ALM     desplazar e ir al estado 12
    CALIF_TIPO    desplazar e ir al estado 13
    STRUCT_UNION  desplazar e ir al estado 14
    ENUM          desplazar e ir al estado 15
    '\n'          desplazar e ir al estado 16
    '&'           desplazar e ir al estado 17
    '+'           desplazar e ir al estado 18
    '-'           desplazar e ir al estado 19
    '*'           desplazar e ir al estado 20
    '('           desplazar e ir al estado 21
    '~'           desplazar e ir al estado 22
    '!'           desplazar e ir al estado 23

    line                         ir al estado 24
    const                        ir al estado 25
    const_enum                   ir al estado 26
    expresion                    ir al estado 27
    exp_asignacion               ir al estado 28
    exp_condicional              ir al estado 29
    exp_OR_log                   ir al estado 30
    exp_AND_log                  ir al estado 31
    exp_OR_in                    ir al estado 32
    exp_OR_ex                    ir al estado 33
    exp_AND                      ir al estado 34
    exp_igualdad                 ir al estado 35
    exp_relacional               ir al estado 36
    exp_desp                     ir al estado 37
    exp_aditiva                  ir al estado 38
    exp_multip                   ir al estado 39
    exp_conversion               ir al estado 40
    exp_unaria                   ir al estado 41
    op_unario                    ir al estado 42
    exp_sufijo                   ir al estado 43
    exp_primaria                 ir al estado 44
    declaracion                  ir al estado 45
    especificadores_declaracion  ir al estado 46
    especificador_tipo           ir al estado 47
    especificador_struct_union   ir al estado 48
    especificador_enum           ir al estado 49


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 const: NUM_ENTERO .

    $default  reduce usando la regla 6 (const)


estado 4

    7 const: NUM_REAL .

    $default  reduce usando la regla 7 (const)


estado 5

  100 especificador_tipo: TIPO_DATO .

    $default  reduce usando la regla 100 (especificador_tipo)


estado 6

   10 const_enum: ID .

    $default  reduce usando la regla 10 (const_enum)


estado 7

   59 exp_unaria: OP_INC . exp_unaria

    NUM_ENTERO  desplazar e ir al estado 3
    NUM_REAL    desplazar e ir al estado 4
    ID          desplazar e ir al estado 6
    OP_INC      desplazar e ir al estado 7
    OP_DEC      desplazar e ir al estado 8
    CHAR        desplazar e ir al estado 9
    STRING      desplazar e ir al estado 10
    SIZEOF      desplazar e ir al estado 11
    '&'         desplazar e ir al estado 17
    '+'         desplazar e ir al estado 18
    '-'         desplazar e ir al estado 19
    '*'         desplazar e ir al estado 20
    '('         desplazar e ir al estado 50
    '~'         desplazar e ir al estado 22
    '!'         desplazar e ir al estado 23

    const         ir al estado 25
    const_enum    ir al estado 26
    exp_unaria    ir al estado 51
    op_unario     ir al estado 42
    exp_sufijo    ir al estado 43
    exp_primaria  ir al estado 44


estado 8

   60 exp_unaria: OP_DEC . exp_unaria

    NUM_ENTERO  desplazar e ir al estado 3
    NUM_REAL    desplazar e ir al estado 4
    ID          desplazar e ir al estado 6
    OP_INC      desplazar e ir al estado 7
    OP_DEC      desplazar e ir al estado 8
    CHAR        desplazar e ir al estado 9
    STRING      desplazar e ir al estado 10
    SIZEOF      desplazar e ir al estado 11
    '&'         desplazar e ir al estado 17
    '+'         desplazar e ir al estado 18
    '-'         desplazar e ir al estado 19
    '*'         desplazar e ir al estado 20
    '('         desplazar e ir al estado 50
    '~'         desplazar e ir al estado 22
    '!'         desplazar e ir al estado 23

    const         ir al estado 25
    const_enum    ir al estado 26
    exp_unaria    ir al estado 52
    op_unario     ir al estado 42
    exp_sufijo    ir al estado 43
    exp_primaria  ir al estado 44


estado 9

    8 const: CHAR .

    $default  reduce usando la regla 8 (const)


estado 10

   80 exp_primaria: STRING .

    $default  reduce usando la regla 80 (exp_primaria)


estado 11

   62 exp_unaria: SIZEOF . exp_unaria
   63           | SIZEOF . '(' nombre_tipo ')'

    NUM_ENTERO  desplazar e ir al estado 3
    NUM_REAL    desplazar e ir al estado 4
    ID          desplazar e ir al estado 6
    OP_INC      desplazar e ir al estado 7
    OP_DEC      desplazar e ir al estado 8
    CHAR        desplazar e ir al estado 9
    STRING      desplazar e ir al estado 10
    SIZEOF      desplazar e ir al estado 11
    '&'         desplazar e ir al estado 17
    '+'         desplazar e ir al estado 18
    '-'         desplazar e ir al estado 19
    '*'         desplazar e ir al estado 20
    '('         desplazar e ir al estado 53
    '~'         desplazar e ir al estado 22
    '!'         desplazar e ir al estado 23

    const         ir al estado 25
    const_enum    ir al estado 26
    exp_unaria    ir al estado 54
    op_unario     ir al estado 42
    exp_sufijo    ir al estado 43
    exp_primaria  ir al estado 44


estado 12

   85 especificadores_declaracion: CLASE_ALM . especificadores_declaracion_opc

    TIPO_DATO     desplazar e ir al estado 5
    CLASE_ALM     desplazar e ir al estado 12
    CALIF_TIPO    desplazar e ir al estado 13
    STRUCT_UNION  desplazar e ir al estado 14
    ENUM          desplazar e ir al estado 15

    $default  reduce usando la regla 88 (especificadores_declaracion_opc)

    especificadores_declaracion      ir al estado 55
    especificadores_declaracion_opc  ir al estado 56
    especificador_tipo               ir al estado 47
    especificador_struct_union       ir al estado 48
    especificador_enum               ir al estado 49


estado 13

   87 especificadores_declaracion: CALIF_TIPO . especificadores_declaracion_opc

    TIPO_DATO     desplazar e ir al estado 5
    CLASE_ALM     desplazar e ir al estado 12
    CALIF_TIPO    desplazar e ir al estado 13
    STRUCT_UNION  desplazar e ir al estado 14
    ENUM          desplazar e ir al estado 15

    $default  reduce usando la regla 88 (especificadores_declaracion_opc)

    especificadores_declaracion      ir al estado 55
    especificadores_declaracion_opc  ir al estado 57
    especificador_tipo               ir al estado 47
    especificador_struct_union       ir al estado 48
    especificador_enum               ir al estado 49


estado 14

  103 especificador_struct_union: STRUCT_UNION . ID_opc '{' lista_declaradores_struct '}'
  104                           | STRUCT_UNION . ID

    ID  desplazar e ir al estado 58

    $default  reduce usando la regla 105 (ID_opc)

    ID_opc  ir al estado 59


estado 15

  149 especificador_enum: ENUM . ID_opc '{' lista_enumeradores '}'
  150                   | ENUM . ID

    ID  desplazar e ir al estado 60

    $default  reduce usando la regla 105 (ID_opc)

    ID_opc  ir al estado 61


estado 16

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 17

   64 op_unario: '&' .

    $default  reduce usando la regla 64 (op_unario)


estado 18

   66 op_unario: '+' .

    $default  reduce usando la regla 66 (op_unario)


estado 19

   67 op_unario: '-' .

    $default  reduce usando la regla 67 (op_unario)


estado 20

   65 op_unario: '*' .

    $default  reduce usando la regla 65 (op_unario)


estado 21

   57 exp_conversion: '(' . nombre_tipo ')' exp_conversion exp_unaria
   81 exp_primaria: '(' . expresion ')'

    NUM_ENTERO    desplazar e ir al estado 3
    NUM_REAL      desplazar e ir al estado 4
    TIPO_DATO     desplazar e ir al estado 5
    ID            desplazar e ir al estado 6
    OP_INC        desplazar e ir al estado 7
    OP_DEC        desplazar e ir al estado 8
    CHAR          desplazar e ir al estado 9
    STRING        desplazar e ir al estado 10
    SIZEOF        desplazar e ir al estado 11
    CALIF_TIPO    desplazar e ir al estado 62
    STRUCT_UNION  desplazar e ir al estado 14
    ENUM          desplazar e ir al estado 15
    '&'           desplazar e ir al estado 17
    '+'           desplazar e ir al estado 18
    '-'           desplazar e ir al estado 19
    '*'           desplazar e ir al estado 20
    '('           desplazar e ir al estado 21
    '~'           desplazar e ir al estado 22
    '!'           desplazar e ir al estado 23

    const                       ir al estado 25
    const_enum                  ir al estado 26
    expresion                   ir al estado 63
    exp_asignacion              ir al estado 28
    exp_condicional             ir al estado 29
    exp_OR_log                  ir al estado 30
    exp_AND_log                 ir al estado 31
    exp_OR_in                   ir al estado 32
    exp_OR_ex                   ir al estado 33
    exp_AND                     ir al estado 34
    exp_igualdad                ir al estado 35
    exp_relacional              ir al estado 36
    exp_desp                    ir al estado 37
    exp_aditiva                 ir al estado 38
    exp_multip                  ir al estado 39
    exp_conversion              ir al estado 40
    exp_unaria                  ir al estado 41
    op_unario                   ir al estado 42
    exp_sufijo                  ir al estado 43
    exp_primaria                ir al estado 44
    especificador_tipo          ir al estado 64
    especificador_struct_union  ir al estado 48
    lista_calificadores         ir al estado 65
    especificador_enum          ir al estado 49
    nombre_tipo                 ir al estado 66


estado 22

   68 op_unario: '~' .

    $default  reduce usando la regla 68 (op_unario)


estado 23

   69 op_unario: '!' .

    $default  reduce usando la regla 69 (op_unario)


estado 24

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 25

   79 exp_primaria: const .

    $default  reduce usando la regla 79 (exp_primaria)


estado 26

    9 const: const_enum .

    $default  reduce usando la regla 9 (const)


estado 27

    4 line: expresion . ';'
   12 expresion: expresion . ',' exp_asignacion

    ';'  desplazar e ir al estado 67
    ','  desplazar e ir al estado 68


estado 28

   11 expresion: exp_asignacion .

    $default  reduce usando la regla 11 (expresion)


estado 29

   13 exp_asignacion: exp_condicional .

    $default  reduce usando la regla 13 (exp_asignacion)


estado 30

   15 exp_condicional: exp_OR_log .
   16                | exp_OR_log . '?' expresion ':' exp_condicional
   29 exp_OR_log: exp_OR_log . OP_OR exp_AND_log

    OP_OR  desplazar e ir al estado 69
    '?'    desplazar e ir al estado 70

    $default  reduce usando la regla 15 (exp_condicional)


estado 31

   28 exp_OR_log: exp_AND_log .
   31 exp_AND_log: exp_AND_log . OP_AND exp_OR_in

    OP_AND  desplazar e ir al estado 71

    $default  reduce usando la regla 28 (exp_OR_log)


estado 32

   30 exp_AND_log: exp_OR_in .
   33 exp_OR_in: exp_OR_in . '|' exp_OR_ex

    '|'  desplazar e ir al estado 72

    $default  reduce usando la regla 30 (exp_AND_log)


estado 33

   32 exp_OR_in: exp_OR_ex .
   35 exp_OR_ex: exp_OR_ex . '^' exp_AND

    '^'  desplazar e ir al estado 73

    $default  reduce usando la regla 32 (exp_OR_in)


estado 34

   34 exp_OR_ex: exp_AND .
   37 exp_AND: exp_AND . '&' exp_igualdad

    '&'  desplazar e ir al estado 74

    $default  reduce usando la regla 34 (exp_OR_ex)


estado 35

   36 exp_AND: exp_igualdad .
   39 exp_igualdad: exp_igualdad . OP_IGUALDAD exp_relacional
   40             | exp_igualdad . OP_DESIGUALDAD exp_relacional

    OP_IGUALDAD     desplazar e ir al estado 75
    OP_DESIGUALDAD  desplazar e ir al estado 76

    $default  reduce usando la regla 36 (exp_AND)


estado 36

   38 exp_igualdad: exp_relacional .
   42 exp_relacional: exp_relacional . '<' exp_desp
   43               | exp_relacional . '>' exp_desp
   44               | exp_relacional . OP_MENOR_IGUAL exp_desp
   45               | exp_relacional . OP_MAYOR_IGUAL exp_desp

    OP_MENOR_IGUAL  desplazar e ir al estado 77
    OP_MAYOR_IGUAL  desplazar e ir al estado 78
    '<'             desplazar e ir al estado 79
    '>'             desplazar e ir al estado 80

    $default  reduce usando la regla 38 (exp_igualdad)


estado 37

   41 exp_relacional: exp_desp .
   47 exp_desp: exp_desp . OP_DESP_IZQ exp_aditiva
   48         | exp_desp . OP_DESP_DER exp_aditiva

    OP_DESP_IZQ  desplazar e ir al estado 81
    OP_DESP_DER  desplazar e ir al estado 82

    $default  reduce usando la regla 41 (exp_relacional)


estado 38

   46 exp_desp: exp_aditiva .
   50 exp_aditiva: exp_aditiva . '+' exp_multip
   51            | exp_aditiva . '-' exp_multip

    '+'  desplazar e ir al estado 83
    '-'  desplazar e ir al estado 84

    $default  reduce usando la regla 46 (exp_desp)


estado 39

   49 exp_aditiva: exp_multip .
   53 exp_multip: exp_multip . '*' exp_conversion
   54           | exp_multip . '/' exp_conversion
   55           | exp_multip . '%' exp_conversion

    '*'  desplazar e ir al estado 85
    '/'  desplazar e ir al estado 86
    '%'  desplazar e ir al estado 87

    $default  reduce usando la regla 49 (exp_aditiva)


estado 40

   52 exp_multip: exp_conversion .

    $default  reduce usando la regla 52 (exp_multip)


estado 41

   14 exp_asignacion: exp_unaria . op_asignacion exp_asignacion
   56 exp_conversion: exp_unaria .

    '='            desplazar e ir al estado 88
    ASIG_MULT      desplazar e ir al estado 89
    ASIG_DIV       desplazar e ir al estado 90
    ASIG_MOD       desplazar e ir al estado 91
    ASIG_SUMA      desplazar e ir al estado 92
    ASIG_RESTA     desplazar e ir al estado 93
    ASIG_DESP_IZQ  desplazar e ir al estado 94
    ASIG_DESP_DER  desplazar e ir al estado 95
    ASIG_AND_BIN   desplazar e ir al estado 96
    ASIG_XOR_BIN   desplazar e ir al estado 97
    ASIG_OR_BIN    desplazar e ir al estado 98

    $default  reduce usando la regla 56 (exp_conversion)

    op_asignacion  ir al estado 99


estado 42

   61 exp_unaria: op_unario . exp_conversion

    NUM_ENTERO  desplazar e ir al estado 3
    NUM_REAL    desplazar e ir al estado 4
    ID          desplazar e ir al estado 6
    OP_INC      desplazar e ir al estado 7
    OP_DEC      desplazar e ir al estado 8
    CHAR        desplazar e ir al estado 9
    STRING      desplazar e ir al estado 10
    SIZEOF      desplazar e ir al estado 11
    '&'         desplazar e ir al estado 17
    '+'         desplazar e ir al estado 18
    '-'         desplazar e ir al estado 19
    '*'         desplazar e ir al estado 20
    '('         desplazar e ir al estado 21
    '~'         desplazar e ir al estado 22
    '!'         desplazar e ir al estado 23

    const           ir al estado 25
    const_enum      ir al estado 26
    exp_conversion  ir al estado 100
    exp_unaria      ir al estado 101
    op_unario       ir al estado 42
    exp_sufijo      ir al estado 43
    exp_primaria    ir al estado 44


estado 43

   58 exp_unaria: exp_sufijo .
   71 exp_sufijo: exp_sufijo . '[' expresion ']'
   72           | exp_sufijo . '(' lista_argumentos ')'
   73           | exp_sufijo . '.' ID
   74           | exp_sufijo . OP_MIEMBRO_PUNT ID
   75           | exp_sufijo . OP_INC
   76           | exp_sufijo . OP_DEC

    OP_INC           desplazar e ir al estado 102
    OP_DEC           desplazar e ir al estado 103
    OP_MIEMBRO_PUNT  desplazar e ir al estado 104
    '('              desplazar e ir al estado 105
    '['              desplazar e ir al estado 106
    '.'              desplazar e ir al estado 107

    OP_INC    [reduce usando la regla 58 (exp_unaria)]
    OP_DEC    [reduce usando la regla 58 (exp_unaria)]
    '('       [reduce usando la regla 58 (exp_unaria)]
    $default  reduce usando la regla 58 (exp_unaria)


estado 44

   70 exp_sufijo: exp_primaria .

    $default  reduce usando la regla 70 (exp_sufijo)


estado 45

    5 line: declaracion . ';'

    ';'  desplazar e ir al estado 108


estado 46

   82 declaracion: especificadores_declaracion . lista_declaradores_opc

    '*'  desplazar e ir al estado 109

    ';'       reduce usando la regla 83 (lista_declaradores_opc)
    $default  reduce usando la regla 124 (puntero_opc)

    lista_declaradores_opc  ir al estado 110
    lista_declaradores      ir al estado 111
    declarador              ir al estado 112
    decla                   ir al estado 113
    puntero_opc             ir al estado 114
    puntero                 ir al estado 115


estado 47

   86 especificadores_declaracion: especificador_tipo . especificadores_declaracion_opc

    TIPO_DATO     desplazar e ir al estado 5
    CLASE_ALM     desplazar e ir al estado 12
    CALIF_TIPO    desplazar e ir al estado 13
    STRUCT_UNION  desplazar e ir al estado 14
    ENUM          desplazar e ir al estado 15

    $default  reduce usando la regla 88 (especificadores_declaracion_opc)

    especificadores_declaracion      ir al estado 55
    especificadores_declaracion_opc  ir al estado 116
    especificador_tipo               ir al estado 47
    especificador_struct_union       ir al estado 48
    especificador_enum               ir al estado 49


estado 48

  101 especificador_tipo: especificador_struct_union .

    $default  reduce usando la regla 101 (especificador_tipo)


estado 49

  102 especificador_tipo: especificador_enum .

    $default  reduce usando la regla 102 (especificador_tipo)


estado 50

   81 exp_primaria: '(' . expresion ')'

    NUM_ENTERO  desplazar e ir al estado 3
    NUM_REAL    desplazar e ir al estado 4
    ID          desplazar e ir al estado 6
    OP_INC      desplazar e ir al estado 7
    OP_DEC      desplazar e ir al estado 8
    CHAR        desplazar e ir al estado 9
    STRING      desplazar e ir al estado 10
    SIZEOF      desplazar e ir al estado 11
    '&'         desplazar e ir al estado 17
    '+'         desplazar e ir al estado 18
    '-'         desplazar e ir al estado 19
    '*'         desplazar e ir al estado 20
    '('         desplazar e ir al estado 21
    '~'         desplazar e ir al estado 22
    '!'         desplazar e ir al estado 23
